--- a/css/style.css
+++ b/css/style.css
@@ -59,19 +59,13 @@ body {
   flex-direction: column;
 }
 
-header {
+body header {
   height: 2.32rem;
   background: url(../images/header.png) no-repeat;
   background-size: cover;
 }
 
-footer {
-  height: 1.8rem;
-  background: url(../images/footer.png) no-repeat;
-  background-size: cover;
-}
-
-#certify {
+body #certify {
   position: relative;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
@@ -81,7 +75,7 @@ footer {
   background-size: cover;
 }
 
-#certify .swiper-container {
+body #certify .swiper-container {
   width: 100%;
   height: 100%;
   padding: 1.2rem 0.8rem;
@@ -89,12 +83,12 @@ footer {
   -webkit-box-sizing: border-box;
 }
 
-.swiper-wrapper {
+body #certify .swiper-container .swiper-wrapper {
   width: 100%;
   height: 100%;
 }
 
-#certify .swiper-slide {
+body #certify .swiper-container .swiper-wrapper .swiper-slide {
   width: 100%;
   height: 100%;
   z-index: 999;
@@ -104,8 +98,14 @@ footer {
   box-shadow: 0px 0.08rem 0.8rem 0rem #999999;
 }
 
-#certify .swiper-slide img {
+body #certify .swiper-container .swiper-wrapper .swiper-slide img {
   width: 100%;
   height: 100%;
   display: block;
+}
+
+body footer {
+  height: 1.8rem;
+  background: url(../images/footer.png) no-repeat;
+  background-size: cover;
 }
