--- a/css/style.scss
+++ b/css/style.scss
@@ -3,114 +3,106 @@
 /* CSS Document */
 
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 a {
-	outline: none;
-	text-decoration: none;
-	-webkit-tap-highlight-color: transparent;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
+    outline: none;
+    text-decoration: none;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
 }
 
 * {
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	-webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
 }
 
 ::-moz-placeholder {
-	color: #999999;
+    color: #999999;
 }
 
 ::-webkit-input-placeholder {
-	color: #999999;
+    color: #999999;
 }
 
 :-ms-input-placeholder {
-	color: #999999;
+    color: #999999;
 }
 
 ::-webkit-scrollbar {
-	display: none;
+    display: none;
 }
 
 input,
 textarea {
-	outline: none;
-	border: 0;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    outline: none;
+    border: 0;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 li {
-	list-style: none;
+    list-style: none;
 }
 
 html,
 body {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 $sc:25;
 body {
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-flex-direction: column;
-	-ms-flex-direction: column;
-	flex-direction: column;
-}
-
-header {
-	height: 58/$sc+rem;
-	background: url(../images/header.png) no-repeat;
-	background-size: cover;
-}
-
-footer {
-	height: 45/$sc+rem;
-	background: url(../images/footer.png) no-repeat;
-	background-size: cover;
-}
-
-#certify {
-	position: relative;
-	-webkit-box-flex: 1;
-	-webkit-flex: 1;
-	-ms-flex: 1;
-	flex: 1;
-	background: url(../images/b.png) no-repeat;
-	background-size: cover;
-}
-
-#certify .swiper-container {
-	width: 100%;
-	height: 100%;
-	padding: 30/$sc+rem 20/$sc+rem;
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-}
-
-.swiper-wrapper {
-	width: 100%;
-	height: 100%;
-	
-}
-
-#certify .swiper-slide {
-	width: 100%;
-	height: 100%;
-	z-index: 999;
-	overflow: hidden;
-	background: #FFFFFF;
-	border-radius: 20/$sc+rem;
-    box-shadow: 0px 2/$sc+rem 20/$sc+rem 0/$sc+rem #999999;
-}
-
-#certify .swiper-slide img {
-	width: 100%;
-	height: 100%;
-	display: block;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    header {
+        height: 58/$sc+rem;
+        background: url(../images/header.png) no-repeat;
+        background-size: cover;
+    }
+    #certify {
+        position: relative;
+        -webkit-box-flex: 1;
+        -webkit-flex: 1;
+        -ms-flex: 1;
+        flex: 1;
+        background: url(../images/b.png) no-repeat;
+        background-size: cover;
+        .swiper-container {
+            width: 100%;
+            height: 100%;
+            padding: 30/$sc+rem 20/$sc+rem;
+            box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            .swiper-wrapper {
+                width: 100%;
+                height: 100%;
+                .swiper-slide {
+                    width: 100%;
+                    height: 100%;
+                    z-index: 999;
+                    overflow: hidden;
+                    background: #FFFFFF;
+                    border-radius: 20/$sc+rem;
+                    box-shadow: 0px 2/$sc+rem 20/$sc+rem 0/$sc+rem #999999;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        display: block;
+                    }
+                }
+            }
+        }
+    }
+    footer {
+        height: 45/$sc+rem;
+        background: url(../images/footer.png) no-repeat;
+        background-size: cover;
+    }
 }
