--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -67,7 +68,6 @@ body header {
 
 body #certify {
   position: relative;
-  -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
