--- a/css/style.scss
+++ b/css/style.scss
@@ -51,6 +51,7 @@ html,
 body {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 $sc:25;
@@ -68,7 +69,6 @@ body {
     }
     #certify {
         position: relative;
-        -webkit-box-flex: 1;
         -webkit-flex: 1;
         -ms-flex: 1;
         flex: 1;
