--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,9 @@ body {
   overflow: hidden;
 }
 
-body {
+#wrap {
+  width: 100%;
+  height: 100%;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -60,13 +62,13 @@ body {
   flex-direction: column;
 }
 
-body header {
+#wrap header {
   height: 2.32rem;
   background: url(../images/header.png) no-repeat;
   background-size: cover;
 }
 
-body #certify {
+#wrap #certify {
   position: relative;
   -webkit-flex: 1;
   -ms-flex: 1;
@@ -75,7 +77,7 @@ body #certify {
   background-size: cover;
 }
 
-body #certify .swiper-container {
+#wrap #certify .swiper-container {
   width: 100%;
   height: 100%;
   padding: 1.2rem 0.8rem;
@@ -83,12 +85,12 @@ body #certify .swiper-container {
   -webkit-box-sizing: border-box;
 }
 
-body #certify .swiper-container .swiper-wrapper {
+#wrap #certify .swiper-container .swiper-wrapper {
   width: 100%;
   height: 100%;
 }
 
-body #certify .swiper-container .swiper-wrapper .swiper-slide {
+#wrap #certify .swiper-container .swiper-wrapper .swiper-slide {
   width: 100%;
   height: 100%;
   z-index: 999;
@@ -98,13 +100,13 @@ body #certify .swiper-container .swiper-wrapper .swiper-slide {
   box-shadow: 0px 0.08rem 0.8rem 0rem #999999;
 }
 
-body #certify .swiper-container .swiper-wrapper .swiper-slide img {
+#wrap #certify .swiper-container .swiper-wrapper .swiper-slide img {
   width: 100%;
   height: 100%;
   display: block;
 }
 
-body footer {
+#wrap footer {
   height: 1.8rem;
   background: url(../images/footer.png) no-repeat;
   background-size: cover;
