--- a/css/style.scss
+++ b/css/style.scss
@@ -55,7 +55,9 @@ body {
 }
 
 $sc:25;
-body {
+#wrap {
+    width: 100%;
+    height: 100%;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
