--- a/css/style.scss
+++ b/css/style.scss
@@ -92,7 +92,7 @@ $sc:15;
                     overflow: hidden;
                     background: #FFFFFF;
                     border-radius: 20/$sc+rem;
-                    box-shadow: 0px 2/$sc+rem 20/$sc+rem 0/$sc+rem #999999;
+                    box-shadow: 0/$sc+rem 2/$sc+rem 20/$sc+rem 0/$sc+rem #b4b4b4;
                     img {
                         width: 100%;
                         height: 100%;
